force-app/main/default/objects/Lead/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>50</length>
    <type>Text</type>
</CustomField>