force-app/main/default/objects/Lead/fields/Planet__c.field-meta.xml
<CustomField>
    <fullName>Planet__c</fullName>
    <label>Planet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Planet</valueSetName>
    </valueSet>
</CustomField>