force-app/main/default/objects/Lead/fields/Species__c.field-meta.xml
<CustomField>
    <fullName>Species__c</fullName>
    <description>Datapoint to provide market insights related to trends, customer preferences, and more!</description>
    <label>Species</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Human,</fullName>
                <default>true</default>
                <label>Human,</label>
            </value>
            <value>
                <fullName>Wookie,</fullName>
            </value>
            <value>
                <fullName>Hutt,</fullName>
            </value>
            <value>
                <fullName>Chagrian,</fullName>
            </value>
            <value>
                <fullName>Togruta,</fullName>
            </value>
            <value>
                <fullName>Zabrak/Dathomirian,</fullName>
            </value>
            <value>
                <fullName>Pau&apos;an,</fullName>
            </value>
            <value>
                <fullName>Sith,</fullName>
            </value>
            <value>
                <fullName>Whatever Yoda is,</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>