force-app/main/default/objects/Lead/recordTypes/Droid_Enthusiast.recordType-meta.xml
<RecordType>
    <fullName>Droid_Enthusiast</fullName>
    <active>true</active>
    <businessProcess>Droid Enthusiast</businessProcess>
    <description>Initial contact made at droid trade show</description>
    <label>Droid Enthusiast</label>
</RecordType>