force-app/main/default/objects/Lead/recordTypes/Holonet_Lead.recordType-meta.xml
<RecordType>
    <fullName>Holonet_Lead</fullName>
    <active>true</active>
    <businessProcess>Holonet Lead</businessProcess>
    <description>Lead generated by use of social media from a galaxy far-far-away</description>
    <label>Holonet Lead</label>
</RecordType>