force-app/main/default/objects/Lead/listViews/Lead_Q_Jupiter_Lead.listView-meta.xml
<ListView>
    <fullName>Lead_Q_Jupiter_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Lead Q Jupiter</label>
    <queue>Lead_Q_Jupiter</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>