force-app/main/default/objects/Lead/listViews/Lead_Q_Northeast_Lead.listView-meta.xml
<ListView>
    <fullName>Lead_Q_Northeast_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Lead Q Earth</label>
    <queue>Lead_Q_Earth</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>