force-app/main/default/objects/Lead/listViews/Lead_Q_Northwest_Lead.listView-meta.xml
<ListView>
    <fullName>Lead_Q_Northwest_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Lead Q Corillia</label>
    <queue>Lead_Q_Corillia</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>