force-app/main/default/objects/Lead/listViews/Lead_Q_Southeast_Lead.listView-meta.xml
<ListView>
    <fullName>Lead_Q_Southeast_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Lead Q Kashyyyk</label>
    <queue>Lead_Q_Kashyyyk</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>