force-app/main/default/objects/Lead/listViews/Lead_Q_Soutwest_Lead.listView-meta.xml
<ListView>
    <fullName>Lead_Q_Soutwest_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Lead Q Reach</label>
    <queue>Lead_Q_Reach</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>